--- a/index.html
+++ b/index.html
@@ -357,6 +357,33 @@
         </tbody>
       </table>
     </div>
+
+    <!-- Form  -->
+    <div class="container">
+        <h3>Bootstrap Form</h3>
+        <form class="row g-3 needs-validation" novalidate>
+            <div class="col-md-6">
+              <input type="text" class="form-control" placeholder="First name" required>
+            </div>
+            <div class="col-md-6">
+              <input type="text" class="form-control" placeholder="Last name" required>
+            </div>
+            <div class="col-md-12">
+              <div class="input-group has-validation">
+                <input type="text" class="form-control" placeholder="Email" required>
+              </div>
+            </div>
+            <div class="col-md-12">
+                <input type="text" class="form-control" placeholder="Password" required>
+            </div>
+              <div class="col-md-12">
+                  <input type="text" class="form-control" placeholder="Confirm Password"/>
+              </div>           
+            <div class="col-12">
+              <button class="btn btn-primary" type="submit">Submit form</button>
+            </div>
+          </form>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
